# food-suggestion-ai

./: .gitignore  .tool-versions  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/food-suggestion-ai-backend/: .env.example  README.md  pyproject.toml  requirements.txt
apps/food-suggestion-ai-backend/app/: __init__.py  ai_service.py  config.py  main.py  models.py
apps/food-suggestion-ai-backend/examples/: TestClient.rest
apps/food-suggestion-ai-web/: next.config.ts  package.json  pnpm-lock.yaml
apps/food-suggestion-ai-web/app/: globals.css  page.module.css  page.tsx
apps/food-suggestion-ai-web/components/: ApiKeyModal.module.css  ApiKeyModal.tsx  SuggestionCard.module.css  SuggestionCard.tsx
apps/food-suggestion-ai-web/lib/: api.ts
apps/food-suggestion-ai-web/types/: index.ts
